--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,6 +5,6 @@
  <form action='login' method='POST'>
                 <input type='text' name='username' id='usernam' placeholder='username'/>
                 <input type='password' name='password' id='password' placeholder='password'/>
-                <input type='submit' name='submit'/>
+                <input type='submit' name='submit' value="Submit"/>
                </form>
 {% endblock %}
